#	$Id$	

Chandlog since HylaFAX 4.3.1

* Add the Include: option for Config file options (8 Jan 2007)
* Redirected unwanted output from pd2pdf while running notify (24 Dec 2006)
* Use @SCRIPT_SH@ for bin/ scripts to allow configure selection (23 Dec 2006)
* Updated pollrcvd to use templates (22 Dec 2006)
* Moved default templates to etc/tempates/en/ to clean up etc/templates/ (22 Dec 2006)

Changelog for HylaFAX 4.3.1

* Added exit codes to faxalter (Bug 796) (4 Dec 2006)
* Fixed faxqclean to work correctly with cover documents using the new naming
  scheme, yet still work with previously named documents (bug 831) (20 Nov 2006)
* Fixed sendfax PDF page counting (bug 830) (13 Nov 2006)
* Disable JPEG support when compiling with older libtiff (3 Nov 2006)
* Use old style lock files for OpenServer 6 (20 Oct 2006)
* Always update on-disk qfiles for jobs when state changes to running (19 Oct 2006)
* Change how we compile shared objects for Solaris DSO support (12 Oct 2006)
* Base64 encoding with uuencode was broken on 3 Oct (6 Oct 2006)
* uuencode STDERR was not redirected to $ERRORSTO (6 Oct 2006)
* There was a small possibility of corruption a base64 output produced
  by uuencode if an encoded line started with "begin" (6 Oct 2006)
* Private tmpdir was not set by faxrcvd, but used for body encoding (6 Oct 2006)
* fax faxqclean, don't remove cover documents still referenced (4 Oct 2006)
* Encodes email body according to template setting (3 Oct 2006)
* Add Quoted-Printable encoding option (3 Oct 2006)
* Add Romanian templates (29 Sep 2006)
* faxsetup nolonger blindly removes $TMPDIR (29 Sep 2006)
* Add Motorola SM56 USB (Apple) modem (27 Sep 2006)
* Add HPUX 11.11 support to configure (27 Sep 2006)
* make cover pages visible in /docq/ through hfaxd (17 Sep 2006)
* handle +FHNG/+FNG after AT+FDT in Class 2 (15 Sep 2006)
* Unify mime encoding between notify and faxrcvd
* Add templates for use in faxrcvd translations (14 Aug 2006)