@@ -2,6 +2,7 @@
 
 Chandlog since HylaFAX 4.3.1
 
+* Simplify/Unify mime encoder selection and use (9 Jan 2007)
 * Add the Include: option for Config file options (8 Jan 2007)
 * Redirected unwanted output from pd2pdf while running notify (24 Dec 2006)
 * Use @SCRIPT_SH@ for bin/ scripts to allow configure selection (23 Dec 2006)
